# protei_project

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  main.cpp  test.sh  utils.cpp  utils.h
client/include/Model/: Menu.h  MenuItem.h  VectorFactory.h  vector.hpp
client/include/Model/MenuItems/: AddVectorItem.h  PrintVectorItem.h  QuitItem.h  SendVectorItem.h
client/include/Network/: AppSettings.h  NetworkAddress.h  NetworkClient.h
client/include/Test/: ConnectionTest.h  ResourceTest.h  Test.h
client/include/utils/: utils.h
client/src/: client_main.cpp
client/src/Model/: Menu.cpp  MenuItem.cpp  VectorFactory.cpp
client/src/Network/: AppSettings.cpp  NetworkAddress.cpp  NetworkClient.cpp
client/src/Test/: ConnectionTest.cpp  ResourceTest.cpp
client/src/utils/: utils.cpp
include/: AppSettings.h  ConnectionTest.h  DataPool.h  Menu.h  NetworkAddress.h  ResourceTest.h  Test.h  core.h  interfaces.h  utils.h  vector.hpp
myvector/include/: MyVector.hpp  VectorFactory.h
myvector/src/: MyVector.cpp  VectorFactory.cpp
server/include/model/: ServerHandlers.h
server/include/network/: Server.h
server/include/utils/: utils.h
server/src/: server_main.cpp
server/src/model/: ServerHandlers.cpp
server/src/network/: Server.cpp
server/src/utils/: utils.cpp
src/: AppSettings.cpp  ConnectionTest.cpp  DataPool.cpp  Menu.cpp  NetworkAddress.cpp  ResourceTest.cpp  core.cpp  main.cpp  utils.cpp
test/: test.cpp
